--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.1"
   },
   "scripts": {
     "seed-admin": "ts-node-dev --respawn --transpile-only seedAdmin.ts",
@@ -16,20 +18,23 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^24.0.3",
     "@types/supertest": "^2.0.12",
     "jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
+    "mongodb-memory-server": "^8.9.3",
     "supertest": "^6.0.0",
-    "mongodb-memory-server": "^8.9.3"
+    "ts-jest": "^29.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/*.test.ts"]
+    "testMatch": [
+      "**/__tests__/**/*.test.ts"
+    ]
   }
 }
